fixed the image not showing up and also experimented with background colors you guys can change it tho if you like

--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@ html, body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    background-image: url(pictures/homepagebg2.jpg); 
+    /*background-image: url(pictures/homepagebg2.jpg); 
     background-size: cover;
-    background-position: center;
+    background-position: center; */
     font-family: Arial, sans-serif;
     color: #333;
     height: 100%; 
